{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 24,
  "lineage": "3bef11a1-39c8-e57e-222b-8f61f5f89514",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0433821d8e493c7b2",
            "arn": "arn:aws:ec2:us-east-1:025988852505:elastic-ip/eipalloc-0433821d8e493c7b2",
            "domain": "vpc",
            "id": "eipalloc-0433821d8e493c7b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-48-127.compute-1.amazonaws.com",
            "public_ip": "52.7.48.127",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-nat-eip-0",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-nat-eip-0",
              "env": "dev",
              "project": "eks-idp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:internet-gateway/igw-000c03b13f8999b68",
            "id": "igw-000c03b13f8999b68",
            "owner_id": "025988852505",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-igw",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-igw",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0433821d8e493c7b2",
            "association_id": "eipassoc-0c75f2bcfd886f230",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08cabc17a637cb77e",
            "network_interface_id": "eni-08b95ecc0da65428f",
            "private_ip": "10.0.15.39",
            "public_ip": "52.7.48.127",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004a26028b73b374e",
            "tags": {
              "Name": "eks-idp-dev-nat-0",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-nat-0",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:route-table/rtb-09926c656eb174f8f",
            "id": "rtb-09926c656eb174f8f",
            "owner_id": "025988852505",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08cabc17a637cb77e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-idp-dev-private-rt-0",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-private-rt-0",
              "env": "dev",
              "project": "eks-idp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "rtb-09926c656eb174f8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:route-table/rtb-0dd5be96045c58c57",
            "id": "rtb-0dd5be96045c58c57",
            "owner_id": "025988852505",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08cabc17a637cb77e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-idp-dev-private-rt-1",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-private-rt-1",
              "env": "dev",
              "project": "eks-idp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "rtb-0dd5be96045c58c57",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:route-table/rtb-0faf2e88b23e022c0",
            "id": "rtb-0faf2e88b23e022c0",
            "owner_id": "025988852505",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000c03b13f8999b68",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-idp-dev-public-rt",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-public-rt",
              "env": "dev",
              "project": "eks-idp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "rtb-0faf2e88b23e022c0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e33d0816cbb98571",
            "region": "us-east-1",
            "route_table_id": "rtb-09926c656eb174f8f",
            "subnet_id": "subnet-0343bdd43430fa4a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077d691ba63f89db",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd5be96045c58c57",
            "subnet_id": "subnet-0ab3a49112864b1f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e45e3c86ef762e8c",
            "region": "us-east-1",
            "route_table_id": "rtb-0faf2e88b23e022c0",
            "subnet_id": "subnet-004a26028b73b374e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b36549ef86b1a6d",
            "region": "us-east-1",
            "route_table_id": "rtb-0faf2e88b23e022c0",
            "subnet_id": "subnet-0a616af045458ea55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:subnet/subnet-0343bdd43430fa4a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0343bdd43430fa4a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025988852505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-private-us-east-1a",
              "Tier": "private",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-private-us-east-1a",
              "Tier": "private",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "subnet-0343bdd43430fa4a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:subnet/subnet-0ab3a49112864b1f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3a49112864b1f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025988852505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-private-us-east-1b",
              "Tier": "private",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-private-us-east-1b",
              "Tier": "private",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "subnet-0ab3a49112864b1f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:subnet/subnet-004a26028b73b374e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a26028b73b374e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025988852505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-public-us-east-1a",
              "Tier": "public",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-public-us-east-1a",
              "Tier": "public",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "subnet-004a26028b73b374e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:subnet/subnet-0a616af045458ea55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a616af045458ea55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025988852505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-public-us-east-1b",
              "Tier": "public",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-public-us-east-1b",
              "Tier": "public",
              "env": "dev",
              "project": "eks-idp"
            },
            "vpc_id": "vpc-0cacf63329629eb43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "subnet-0a616af045458ea55",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025988852505:vpc/vpc-0cacf63329629eb43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8cd96a62cc6891b",
            "default_route_table_id": "rtb-06254ec52b37c67ae",
            "default_security_group_id": "sg-0c653fc48fe29958f",
            "dhcp_options_id": "dopt-0b781f6a09cc90a88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cacf63329629eb43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06254ec52b37c67ae",
            "owner_id": "025988852505",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-idp-dev-vpc",
              "env": "dev",
              "project": "eks-idp"
            },
            "tags_all": {
              "Name": "eks-idp-dev-vpc",
              "env": "dev",
              "project": "eks-idp"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025988852505",
            "id": "vpc-0cacf63329629eb43",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}